Project completed v.1.0.0