@@ -3,6 +3,7 @@ package com.lunar.challenge.rockets.service;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.lunar.challenge.rockets.domain.MessageType;
 import com.lunar.challenge.rockets.domain.RocketTracker;
+import com.lunar.challenge.rockets.domain.event.RocketEvent;
 import com.lunar.challenge.rockets.dto.Metadata;
 import com.lunar.challenge.rockets.dto.RocketStatusView;
 import com.lunar.challenge.rockets.exception.RocketNotFoundException;
@@ -12,6 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.OffsetDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -23,9 +25,6 @@ public class RocketService {
 
     /**
      * Apply incoming message to rocket state
-     *
-     * @param metadata of message
-     * @param payload  of message
      */
     public void handleMessage(Metadata metadata, JsonNode payload) {
         String channel = metadata.getChannel();
@@ -33,17 +32,24 @@ public class RocketService {
         OffsetDateTime messageTime = metadata.getMessageTime();
         MessageType messageType = MessageType.valueOf(metadata.getMessageType());
 
+        // JSON -> Rocket Event
+        RocketEvent event = EventMapper.from(messageType, payload);
+
+        // creating tracker
         RocketTracker tracker = repository.findByChannel(channel)
                 .orElseGet(() -> {
                     log.info("Creating new tracker for channel {}", channel);
-                    RocketTracker tr = new RocketTracker(channel);
-                    repository.save(tr);
-                    return tr;
+                    return new RocketTracker(channel);
                 });
+        
+        // applying events
+        tracker.stageAndApply(messageNumber, messageTime, messageType, event);
+        repository.save(tracker);
 
-        tracker.stageAndApply(messageNumber, messageTime, messageType, payload);
-        log.debug("Applied message {} type {} to channel {}", messageNumber, messageType, channel);
+        log.debug("Applied message {} type {} to channel {}",
+                messageNumber, event.getClass().getSimpleName(), channel);
     }
+
 
     /**
      * Get current status of a given single rocket
@@ -65,12 +71,16 @@ public class RocketService {
     public List<RocketStatusView> getAllRockets() {
         return repository.findAll().stream()
                 .map(this::toView)
-                .sorted((a, b) -> a.getChannel().compareTo(b.getChannel()))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(RocketStatusView::getChannel))
+                .toList();
     }
 
     private RocketStatusView toView(RocketTracker tracker) {
         var status = tracker.snapshot();
+        log.info("Building view for channel {}, status: type={}, mission={}, speed={}, time={}",
+                status.getChannel(), status.getType(), status.getMission(),
+                status.getSpeed(), status.getLastMessageTime());
+
         return RocketStatusView.builder()
                 .channel(status.getChannel())
                 .type(status.getType())
@@ -78,6 +88,7 @@ public class RocketService {
                 .mission(status.getMission())
                 .exploded(status.isExploded())
                 .lastMessageTime(status.getLastMessageTime())
+                .history(tracker.getHistory())
                 .build();
     }
 }
